crates/cli/tests/snapshots/unsorted_pattern_params__lint_2cd762a29e24c70ff268bc1b9ee2868b1747a2d9d47441ef23c7b0045c2bc4b8.snap
---
source: crates/cli/tests/unsorted_pattern_params.rs
assertion_line: 5
expression: "\"({ config, lib, pkgs, zebra, alpha, ... }: config)\""
---
[35] Warning: Function pattern parameters are not in canonical order
   ╭─[<temp_file_path>:1:2]
   │
 1 │ ({ config, lib, pkgs, zebra, alpha, ... }: config)
   │  ────────────────────┬───────────────────  
   │                      ╰───────────────────── Reorder parameters to canonical order: config, lib, pkgs, then alphabetical
───╯
