crates/cli/tests/snapshots/unsorted_pattern_params__lint_4405b86e56f9f80289471b3e6cfc4071947ede1af7c7845e23b9aa298d1d0d3e.snap
---
source: crates/cli/tests/unsorted_pattern_params.rs
assertion_line: 5
expression: "\"(args @ { pkgs, config, lib, ... }: config)\""
---
[32] Warning: This pattern binding is never used
   ╭─[<temp_file_path>:1:2]
   │
 1 │ (args @ { pkgs, config, lib, ... }: config)
   │  ────────────────┬────────────────  
   │                  ╰────────────────── args is never used; remove the redundant pattern binding
───╯
[35] Warning: Function pattern parameters are not in canonical order
   ╭─[<temp_file_path>:1:2]
   │
 1 │ (args @ { pkgs, config, lib, ... }: config)
   │  ────────────────┬────────────────  
   │                  ╰────────────────── Reorder parameters to canonical order: config, lib, pkgs, then alphabetical
───╯
