crates/cli/tests/snapshots/unsorted_pattern_params__lint_5aaeefce3c4fba4910c107a5bc576ca2e5c0167b844555bd8f6794c054ca97d1.snap
---
source: crates/cli/tests/unsorted_pattern_params.rs
assertion_line: 5
expression: "\"({ config, pkgs ? null, lib, ... }: config)\""
---
[35] Warning: Function pattern parameters are not in canonical order
   ╭─[<temp_file_path>:1:2]
   │
 1 │ ({ config, pkgs ? null, lib, ... }: config)
   │  ────────────────┬────────────────  
   │                  ╰────────────────── Reorder parameters to canonical order: config, lib, pkgs, then alphabetical
───╯
