crates/cli/tests/snapshots/unsorted_pattern_params__lint_642c7b0a8f662bc8f1593709782b60de1e712f1d41a8f182126ab2f4a819e14a.snap
---
source: crates/cli/tests/unsorted_pattern_params.rs
assertion_line: 5
expression: "\"(args @ { pkgs, config, lib, ... }: args.foo)\""
---
[35] Warning: Function pattern parameters are not in canonical order
   ╭─[<temp_file_path>:1:2]
   │
 1 │ (args @ { pkgs, config, lib, ... }: args.foo)
   │  ────────────────┬────────────────  
   │                  ╰────────────────── Reorder parameters to canonical order: config, lib, pkgs, then alphabetical
───╯
