crates/cli/tests/snapshots/unsorted_pattern_params__lint_6a471d02bb0c28cf2f9302bcc2d4a3f2e2eeaad6fb9b2bc0ed86bd167a764d91.snap
---
source: crates/cli/tests/unsorted_pattern_params.rs
assertion_line: 5
expression: "\"({ config, lib, pkgs, alpha, beta, ... }: config)\""
---

