crates/cli/tests/snapshots/unsorted_pattern_params__lint_79883ac7dde3395abddaea7209bdad96e15a810664caf5b9de5582d3ab2d3360.snap
---
source: crates/cli/tests/unsorted_pattern_params.rs
assertion_line: 5
expression: "\"({ pkgs, config, lib, ... }: config)\""
---
[35] Warning: Function pattern parameters are not in canonical order
   ╭─[<temp_file_path>:1:2]
   │
 1 │ ({ pkgs, config, lib, ... }: config)
   │  ─────────────┬────────────  
   │               ╰────────────── Reorder parameters to canonical order: config, lib, pkgs, then alphabetical
───╯
