crates/cli/tests/snapshots/unsorted_pattern_params__lint_7fe78f815760322fa919585f3608f6e7fadd085b50c56c4aad98dbb9de70e49b.snap
---
source: crates/cli/tests/unsorted_pattern_params.rs
assertion_line: 5
expression: "\"({ config, lib, pkgs, ... }: config)\""
---

