crates/cli/tests/snapshots/unsorted_pattern_params__lint_b81c0202c651c262c3f828b7c8a1ad412b5075e56e71aabb4bf6edfe364dac64.snap
---
source: crates/cli/tests/unsorted_pattern_params.rs
assertion_line: 5
expression: "\"({ lib, config, ... }: config)\""
---
[35] Warning: Function pattern parameters are not in canonical order
   ╭─[<temp_file_path>:1:2]
   │
 1 │ ({ lib, config, ... }: config)
   │  ──────────┬─────────  
   │            ╰─────────── Reorder parameters to canonical order: config, lib, pkgs, then alphabetical
───╯
