crates/cli/tests/snapshots/unsorted_pattern_params__lint_c46914adf4fe1c871520e3068cd97db30f225dc5f53303b4864b1d443dadf792.snap
---
source: crates/cli/tests/unsorted_pattern_params.rs
assertion_line: 5
expression: "\"({ pkgs, config, lib, ... } @ args: args.foo)\""
---
[35] Warning: Function pattern parameters are not in canonical order
   ╭─[<temp_file_path>:1:2]
   │
 1 │ ({ pkgs, config, lib, ... } @ args: args.foo)
   │  ────────────────┬────────────────  
   │                  ╰────────────────── Reorder parameters to canonical order: config, lib, pkgs, then alphabetical
───╯
