crates/cli/tests/snapshots/unsorted_pattern_params__lint_d126fd36c3561a6c02bd6635634d026132ac432cf96054241af194564f2d211a.snap
---
source: crates/cli/tests/unsorted_pattern_params.rs
assertion_line: 5
expression: "\"({ ... }: 42)\""
---
[10] Warning: Found empty pattern in function argument
   ╭─[<temp_file_path>:1:2]
   │
 1 │ ({ ... }: 42)
   │  ───┬───  
   │     ╰───── This pattern is empty, use _ instead
───╯
